run for all classes